--- a/myexpensetracker/templates/myexpensetracker/index.html
+++ b/myexpensetracker/templates/myexpensetracker/index.html
@@ -1,3 +1,37 @@
 {% extends "myexpensetracker/layout.html" %} {% block body%}
-<h1>Index.html template</h1>
+<h1>INDEX PAGE</h1>
+
+<form method="post">
+  {% csrf_token %}
+
+  <div
+    class="form-container py-5 px-10 flex flex-col lg:flex-row md:jflex grow md:justify-center items-center border border-sky-500"
+  >
+    <div class="m-4 flex justify-center items-center rounded-lg">
+      <div>
+        <label class="mr-3" for="item">Item</label>
+      </div>
+      <div class="border" id="item">{{ expense_form.item }}</div>
+    </div>
+    <div class="m-4 flex justify-center items-center">
+      <div>
+        <label class="mr-3" for="amount">Amount</label>
+      </div>
+      <div class="border">{{ expense_form.amount }}</div>
+    </div>
+    <div class="m-4 flex justify-center items-center">
+      <div>
+        <label class="mr-3" for="type">Type</label>
+      </div>
+      <div class="border">{{ expense_form.type }}</div>
+    </div>
+    <div class="flex m-4 hover:scale-90">
+      <input
+        class="rounded-lg cursor-pointer text-white bg-gray-800 hover:bg-gray-700 focus:outline-none text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700"
+        type="submit"
+        value="Submit"
+      />
+    </div>
+  </div>
+</form>
 {% endblock %}
