--- a/myexpensetracker/templates/myexpensetracker/edit.html
+++ b/myexpensetracker/templates/myexpensetracker/edit.html
@@ -1,5 +1,40 @@
-{% extends "myexpensetracker/layout.html" %} {% block body%}
+{% extends "myexpensetracker/layout.html" %} 
+{% block body %}
+
 <h1>EDIT PAGE</h1>
-<form action="">{{expense_form}}</form>
+
+  <form method="post">
+  {% csrf_token %} 
+     <div
+    class="form-container py-5 px-10 flex flex-col lg:flex-row md:flex grow md:justify-center items-center border border-sky-500 rtl:text-right text-right"
+  >
+    <div class="m-4 flex justify-center items-center rounded-lg">
+      <div>
+        <label class="mr-3" for="item">Item </label>
+      </div>
+      <div class="border" id="item">{{ expense_form.item }}</div>
+    </div>
+    <div class="m-4 flex justify-center items-center">
+      <div>
+        <label class="mr-3" for="amount">Amount</label>
+      </div>
+      <div class="border">{{ expense_form.amount }}</div>
+    </div>
+    <div class="m-4 flex justify-center items-center">
+      <div>
+        <label class="mr-3" for="type">Type</label>
+      </div>
+      <div class="border">{{ expense_form.type }}</div>
+    </div>
+    <div class="flex m-4 hover:scale-90">
+      <input
+        class="rounded-lg cursor-pointer text-white bg-gray-800 hover:bg-gray-700 focus:outline-none text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700"
+        type="submit"
+        value="Submit"
+      />
+    </div>
+  </div>
+  </form>
+
 
 {% endblock %}
