--- a/myexpensetracker/templates/myexpensetracker/edit.html
+++ b/myexpensetracker/templates/myexpensetracker/edit.html
@@ -30,7 +30,7 @@
       <input
         class="rounded-lg cursor-pointer text-white bg-gray-800 hover:bg-gray-700 focus:outline-none text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700"
         type="submit"
-        value="Submit"
+        value="Edit Item"
       />
     </div>
   </div>
