--- a/myexpensetracker/templates/myexpensetracker/index.html
+++ b/myexpensetracker/templates/myexpensetracker/index.html
@@ -61,11 +61,15 @@
           >
         </td>
         <td>
-          <a
-            href=""
-            class="rounded-lg cursor-pointer text-white bg-red-800 hover:bg-red-700 focus:outline-none text-xs px-2.5 py-2.5 dark:bg-red-800 dark:hover:bg-gray-700"
-            >Delete</a
-          >
+          <form method="post" action="{% url 'delete' item.id %}">
+            {% csrf_token %}
+            <button
+              name="delete-btn"
+              class="rounded-lg cursor-pointer text-white bg-red-800 hover:bg-red-700 focus:outline-none text-xs px-2.5 py-2.5 dark:bg-red-800 dark:hover:bg-gray-700"
+            >
+              Delete
+            </button>
+          </form>
         </td>
       </tr>
     </tbody>
@@ -73,7 +77,7 @@
     <tfoot>
       <tr class="font-semibold text-gray-900">
         <th scope="row" class="px-6 py-3 text-base">Total</th>
-        <td class="px-6 py-3">{{items.amount}}XXX</td>
+        <td class="px-6 py-3">XX</td>
       </tr>
     </tfoot>
   </table>
