--- a/myexpensetracker/templates/myexpensetracker/layout.html
+++ b/myexpensetracker/templates/myexpensetracker/layout.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'myexpensetracker/styles.css' %}" />
-    <title>Document</title>
+    <title>MyExpenseTracker</title>
   </head>
   <body>
 
