--- a/myexpensetracker/templates/myexpensetracker/index.html
+++ b/myexpensetracker/templates/myexpensetracker/index.html
@@ -2,7 +2,7 @@
 <form method="post">
   {% csrf_token %}
   <div
-    class="form-container py-10 px-10 flex flex-col lg:flex-grow md:flex grow md:justify-center items-center border border-sky-500 rtl:text-right text-right shadow-md"
+    class="form-container py-5 px-5 flex flex-col min-w-[1010px] lg:flex-row lg:flex-grow md:flex grow md:justify-center items-center border border-sky-500 rtl:text-right text-right shadow-md"
   >
     <h1 class="font-semibold">Add a new item:</h1>
     <div class="m-4 flex justify-center items-center">
@@ -97,8 +97,13 @@
   <h1 class="font-semibold">Recent transactions: </h1>
   <div class="flex flex-row items-center border border-sky-500 rtl:text-right text-right px-3 m-3">
     <p class="title pr-3">Today: </p>
-    <p >  £{{ today_total.amount__sum|floatformat:2}}</p>
-    
+    <p>
+    {% if today_total.amount__sum is zero %}
+    £0
+    {% else %}
+    £{{ today_total.amount__sum|floatformat:2}}
+    {% endif %}
+    </p>
   </div>
   <div class="flex flex-row items-center border border-sky-500 rtl:text-right text-right px-3 m-3">
     <p class="title pr-3">Last 7 days: </p>
