--- a/myexpensetracker/templates/myexpensetracker/index.html
+++ b/myexpensetracker/templates/myexpensetracker/index.html
@@ -130,7 +130,7 @@
     {% for item in transactions_by_category %}
       <div class="flex flex-row items-center border border-sky-500 rtl:text-right text-right px-3 m-3">
           <div class="flex flex-row">
-            <p class="title pr-3">Category: {{ item.category }}</p>
+            <p class="title pr-3">{{ item.category }}:</p>
             <p class="amount">£{{ item.amount__sum | floatformat:2 }}</p>
            
           </div>
@@ -146,6 +146,19 @@
   </div>
 </div>
 
-
-
+<div class="py-10 px-10 flex flex-col md:flex-grow md:justify-center items-center border border-sky-500 rtl:text-right text-right shadow-md">
+  <h1 class="font-semibold">Transactions by Type: </h1>
+   <div class="flex flex-row items-center  rtl:text-right text-right px-3 m-3">
+  <select>
+    <option>Select</option>
+  {% for item in select_item %}
+    <option >
+      {{ item.type }}
+    </option>
+    
+  {% endfor %}
+  
+  </select>
+</div>
+</div>
 {% endblock %}
